Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Parser.y
-----------------------------------------------------------------------------

state 95 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Fun                                (0)
	Fun -> fun main '(' ')' '{' Commands '}'           (1)
	Commands -> Command ';' Commands                   (2)
	Commands -> Command Commands                       (3)
	Commands ->                                        (4)
	Command -> Decl                                    (5)
	Command -> Assign                                  (6)
	Command -> If                                      (7)
	Command -> While                                   (8)
	Command -> Print                                   (9)
	Command -> return                                  (10)
	Print -> print '(' InitExp ')'                     (11)
	Readln -> readln '(' ')'                           (12)
	If -> if '(' Expr ')' Aux_if                       (13)
	If -> if '(' Expr ')' Aux_if else Aux_if           (14)
	Aux_if -> Command                                  (15)
	Aux_if -> '{' Commands '}'                         (16)
	While -> while '(' Expr ')' Command                (17)
	While -> while '(' Expr ')' '{' Commands '}'       (18)
	Type -> int                                        (19)
	Type -> float                                      (20)
	Type -> boolean                                    (21)
	InitExp -> Expr                                    (22)
	Decl -> var id '=' InitExp                         (23)
	Decl -> val id '=' InitExp                         (24)
	Decl -> var id ':' Type '=' InitExp                (25)
	Decl -> val id ':' Type '=' InitExp                (26)
	Assign -> id '=' Expr                              (27)
	Assign -> id "+=" Expr                             (28)
	Assign -> id "-=" Expr                             (29)
	Assign -> id "*=" Expr                             (30)
	Assign -> id "/=" Expr                             (31)
	Assign -> id "%=" Expr                             (32)
	Assign -> PostIncDecExp                            (33)
	Expr -> Expr '+' Expr                              (34)
	Expr -> Expr '-' Expr                              (35)
	Expr -> Expr '*' Expr                              (36)
	Expr -> Expr '/' Expr                              (37)
	Expr -> Expr '%' Expr                              (38)
	Expr -> Expr "&&" Expr                             (39)
	Expr -> Expr "||" Expr                             (40)
	Expr -> Expr '>' Expr                              (41)
	Expr -> Expr ">=" Expr                             (42)
	Expr -> Expr '<' Expr                              (43)
	Expr -> Expr "<=" Expr                             (44)
	Expr -> Expr "==" Expr                             (45)
	Expr -> Expr "!=" Expr                             (46)
	Expr -> '!' Expr                                   (47)
	Expr -> '-' Expr                                   (48)
	Expr -> Atomic                                     (49)
	Expr -> Readln                                     (50)
	PostIncDecExp -> id "++"                           (51)
	PostIncDecExp -> id "--"                           (52)
	Atomic -> id                                       (53)
	Atomic -> num                                      (54)
	Atomic -> real                                     (55)
	Atomic -> true                                     (56)
	Atomic -> false                                    (57)
	Atomic -> '(' Expr ')'                             (58)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	id             { ID $$ }
	num            { NUM $$ }
	real           { REAL $$ }
	'('            { LPAREN }
	')'            { RPAREN }
	'{'            { LBRACE }
	'}'            { RBRACE }
	';'            { SEMICOLON }
	if             { IF }
	else           { ELSE }
	while          { WHILE }
	int            { INT }
	float          { FLOAT }
	boolean        { BOOLEAN }
	fun            { FUN }
	main           { MAIN }
	val            { VAL }
	var            { VAR }
	'+'            { PLUS }
	'-'            { MINUS }
	'*'            { MULT }
	'/'            { DIV }
	'%'            { MOD }
	'>'            { G }
	">="           { GEQ }
	'<'            { L }
	"<="           { LEQ }
	"=="           { EQUAL }
	"!="           { NEQUAL }
	"&&"           { AND }
	"||"           { OR }
	'!'            { NOT }
	"++"           { ICR }
	"--"           { DCR }
	'='            { ATRIB }
	"+="           { ATRIB_PLUS }
	"-="           { ATRIB_MINUS }
	"*="           { ATRIB_MULT }
	"/="           { ATRIB_DIV }
	"%="           { ATRIB_MOD }
	true           { TRUE }
	false          { FALSE }
	readln         { READLN }
	print          { PRINT }
	return         { RETURN }
	':'            { COLON }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Fun             rule  1
	Commands        rules 2, 3, 4
	Command         rules 5, 6, 7, 8, 9, 10
	Print           rule  11
	Readln          rule  12
	If              rules 13, 14
	Aux_if          rules 15, 16
	While           rules 17, 18
	Type            rules 19, 20, 21
	InitExp         rule  22
	Decl            rules 23, 24, 25, 26
	Assign          rules 27, 28, 29, 30, 31, 32, 33
	Expr            rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50
	PostIncDecExp   rules 51, 52
	Atomic          rules 53, 54, 55, 56, 57, 58

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	fun            shift, and enter state 2

	Fun            goto state 3

State 1


	fun            shift, and enter state 2


State 2

	Fun -> fun . main '(' ')' '{' Commands '}'          (rule 1)

	main           shift, and enter state 4


State 3

	%start_parse -> Fun .                               (rule 0)

	%eof           accept


State 4

	Fun -> fun main . '(' ')' '{' Commands '}'          (rule 1)

	'('            shift, and enter state 5


State 5

	Fun -> fun main '(' . ')' '{' Commands '}'          (rule 1)

	')'            shift, and enter state 6


State 6

	Fun -> fun main '(' ')' . '{' Commands '}'          (rule 1)

	'{'            shift, and enter state 7


State 7

	Fun -> fun main '(' ')' '{' . Commands '}'          (rule 1)

	id             shift, and enter state 16
	'}'            reduce using rule 4
	if             shift, and enter state 17
	while          shift, and enter state 18
	val            shift, and enter state 19
	var            shift, and enter state 20
	print          shift, and enter state 21
	return         shift, and enter state 22

	Commands       goto state 8
	Command        goto state 9
	Print          goto state 10
	If             goto state 11
	While          goto state 12
	Decl           goto state 13
	Assign         goto state 14
	PostIncDecExp  goto state 15

State 8

	Fun -> fun main '(' ')' '{' Commands . '}'          (rule 1)

	'}'            shift, and enter state 38


State 9

	Commands -> Command . ';' Commands                  (rule 2)
	Commands -> Command . Commands                      (rule 3)

	id             shift, and enter state 16
	'}'            reduce using rule 4
	';'            shift, and enter state 37
	if             shift, and enter state 17
	while          shift, and enter state 18
	val            shift, and enter state 19
	var            shift, and enter state 20
	print          shift, and enter state 21
	return         shift, and enter state 22

	Commands       goto state 36
	Command        goto state 9
	Print          goto state 10
	If             goto state 11
	While          goto state 12
	Decl           goto state 13
	Assign         goto state 14
	PostIncDecExp  goto state 15

State 10

	Command -> Print .                                  (rule 9)

	id             reduce using rule 9
	'}'            reduce using rule 9
	';'            reduce using rule 9
	if             reduce using rule 9
	else           reduce using rule 9
	while          reduce using rule 9
	val            reduce using rule 9
	var            reduce using rule 9
	print          reduce using rule 9
	return         reduce using rule 9


State 11

	Command -> If .                                     (rule 7)

	id             reduce using rule 7
	'}'            reduce using rule 7
	';'            reduce using rule 7
	if             reduce using rule 7
	else           reduce using rule 7
	while          reduce using rule 7
	val            reduce using rule 7
	var            reduce using rule 7
	print          reduce using rule 7
	return         reduce using rule 7


State 12

	Command -> While .                                  (rule 8)

	id             reduce using rule 8
	'}'            reduce using rule 8
	';'            reduce using rule 8
	if             reduce using rule 8
	else           reduce using rule 8
	while          reduce using rule 8
	val            reduce using rule 8
	var            reduce using rule 8
	print          reduce using rule 8
	return         reduce using rule 8


State 13

	Command -> Decl .                                   (rule 5)

	id             reduce using rule 5
	'}'            reduce using rule 5
	';'            reduce using rule 5
	if             reduce using rule 5
	else           reduce using rule 5
	while          reduce using rule 5
	val            reduce using rule 5
	var            reduce using rule 5
	print          reduce using rule 5
	return         reduce using rule 5


State 14

	Command -> Assign .                                 (rule 6)

	id             reduce using rule 6
	'}'            reduce using rule 6
	';'            reduce using rule 6
	if             reduce using rule 6
	else           reduce using rule 6
	while          reduce using rule 6
	val            reduce using rule 6
	var            reduce using rule 6
	print          reduce using rule 6
	return         reduce using rule 6


State 15

	Assign -> PostIncDecExp .                           (rule 33)

	id             reduce using rule 33
	'}'            reduce using rule 33
	';'            reduce using rule 33
	if             reduce using rule 33
	else           reduce using rule 33
	while          reduce using rule 33
	val            reduce using rule 33
	var            reduce using rule 33
	print          reduce using rule 33
	return         reduce using rule 33


State 16

	Assign -> id . '=' Expr                             (rule 27)
	Assign -> id . "+=" Expr                            (rule 28)
	Assign -> id . "-=" Expr                            (rule 29)
	Assign -> id . "*=" Expr                            (rule 30)
	Assign -> id . "/=" Expr                            (rule 31)
	Assign -> id . "%=" Expr                            (rule 32)
	PostIncDecExp -> id . "++"                          (rule 51)
	PostIncDecExp -> id . "--"                          (rule 52)

	"++"           shift, and enter state 28
	"--"           shift, and enter state 29
	'='            shift, and enter state 30
	"+="           shift, and enter state 31
	"-="           shift, and enter state 32
	"*="           shift, and enter state 33
	"/="           shift, and enter state 34
	"%="           shift, and enter state 35


State 17

	If -> if . '(' Expr ')' Aux_if                      (rule 13)
	If -> if . '(' Expr ')' Aux_if else Aux_if          (rule 14)

	'('            shift, and enter state 27


State 18

	While -> while . '(' Expr ')' Command               (rule 17)
	While -> while . '(' Expr ')' '{' Commands '}'      (rule 18)

	'('            shift, and enter state 26


State 19

	Decl -> val . id '=' InitExp                        (rule 24)
	Decl -> val . id ':' Type '=' InitExp               (rule 26)

	id             shift, and enter state 25


State 20

	Decl -> var . id '=' InitExp                        (rule 23)
	Decl -> var . id ':' Type '=' InitExp               (rule 25)

	id             shift, and enter state 24


State 21

	Print -> print . '(' InitExp ')'                    (rule 11)

	'('            shift, and enter state 23


State 22

	Command -> return .                                 (rule 10)

	id             reduce using rule 10
	'}'            reduce using rule 10
	';'            reduce using rule 10
	if             reduce using rule 10
	else           reduce using rule 10
	while          reduce using rule 10
	val            reduce using rule 10
	var            reduce using rule 10
	print          reduce using rule 10
	return         reduce using rule 10


State 23

	Print -> print '(' . InitExp ')'                    (rule 11)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	InitExp        goto state 63
	Expr           goto state 64
	Atomic         goto state 42

State 24

	Decl -> var id . '=' InitExp                        (rule 23)
	Decl -> var id . ':' Type '=' InitExp               (rule 25)

	'='            shift, and enter state 61
	':'            shift, and enter state 62


State 25

	Decl -> val id . '=' InitExp                        (rule 24)
	Decl -> val id . ':' Type '=' InitExp               (rule 26)

	'='            shift, and enter state 59
	':'            shift, and enter state 60


State 26

	While -> while '(' . Expr ')' Command               (rule 17)
	While -> while '(' . Expr ')' '{' Commands '}'      (rule 18)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 58
	Atomic         goto state 42

State 27

	If -> if '(' . Expr ')' Aux_if                      (rule 13)
	If -> if '(' . Expr ')' Aux_if else Aux_if          (rule 14)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 57
	Atomic         goto state 42

State 28

	PostIncDecExp -> id "++" .                          (rule 51)

	id             reduce using rule 51
	'}'            reduce using rule 51
	';'            reduce using rule 51
	if             reduce using rule 51
	else           reduce using rule 51
	while          reduce using rule 51
	val            reduce using rule 51
	var            reduce using rule 51
	print          reduce using rule 51
	return         reduce using rule 51


State 29

	PostIncDecExp -> id "--" .                          (rule 52)

	id             reduce using rule 52
	'}'            reduce using rule 52
	';'            reduce using rule 52
	if             reduce using rule 52
	else           reduce using rule 52
	while          reduce using rule 52
	val            reduce using rule 52
	var            reduce using rule 52
	print          reduce using rule 52
	return         reduce using rule 52


State 30

	Assign -> id '=' . Expr                             (rule 27)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 56
	Atomic         goto state 42

State 31

	Assign -> id "+=" . Expr                            (rule 28)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 55
	Atomic         goto state 42

State 32

	Assign -> id "-=" . Expr                            (rule 29)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 54
	Atomic         goto state 42

State 33

	Assign -> id "*=" . Expr                            (rule 30)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 53
	Atomic         goto state 42

State 34

	Assign -> id "/=" . Expr                            (rule 31)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 52
	Atomic         goto state 42

State 35

	Assign -> id "%=" . Expr                            (rule 32)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 41
	Atomic         goto state 42

State 36

	Commands -> Command Commands .                      (rule 3)

	'}'            reduce using rule 3


State 37

	Commands -> Command ';' . Commands                  (rule 2)

	id             shift, and enter state 16
	'}'            reduce using rule 4
	if             shift, and enter state 17
	while          shift, and enter state 18
	val            shift, and enter state 19
	var            shift, and enter state 20
	print          shift, and enter state 21
	return         shift, and enter state 22

	Commands       goto state 39
	Command        goto state 9
	Print          goto state 10
	If             goto state 11
	While          goto state 12
	Decl           goto state 13
	Assign         goto state 14
	PostIncDecExp  goto state 15

State 38

	Fun -> fun main '(' ')' '{' Commands '}' .          (rule 1)

	%eof           reduce using rule 1


State 39

	Commands -> Command ';' Commands .                  (rule 2)

	'}'            reduce using rule 2


State 40

	Expr -> Readln .                                    (rule 50)

	id             reduce using rule 50
	')'            reduce using rule 50
	'}'            reduce using rule 50
	';'            reduce using rule 50
	if             reduce using rule 50
	else           reduce using rule 50
	while          reduce using rule 50
	val            reduce using rule 50
	var            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'*'            reduce using rule 50
	'/'            reduce using rule 50
	'%'            reduce using rule 50
	'>'            reduce using rule 50
	">="           reduce using rule 50
	'<'            reduce using rule 50
	"<="           reduce using rule 50
	"=="           reduce using rule 50
	"!="           reduce using rule 50
	"&&"           reduce using rule 50
	"||"           reduce using rule 50
	print          reduce using rule 50
	return         reduce using rule 50


State 41

	Assign -> id "%=" Expr .                            (rule 32)
	Expr -> Expr . '+' Expr                             (rule 34)
	Expr -> Expr . '-' Expr                             (rule 35)
	Expr -> Expr . '*' Expr                             (rule 36)
	Expr -> Expr . '/' Expr                             (rule 37)
	Expr -> Expr . '%' Expr                             (rule 38)
	Expr -> Expr . "&&" Expr                            (rule 39)
	Expr -> Expr . "||" Expr                            (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . ">=" Expr                            (rule 42)
	Expr -> Expr . '<' Expr                             (rule 43)
	Expr -> Expr . "<=" Expr                            (rule 44)
	Expr -> Expr . "==" Expr                            (rule 45)
	Expr -> Expr . "!=" Expr                            (rule 46)

	id             reduce using rule 32
	'}'            reduce using rule 32
	';'            reduce using rule 32
	if             reduce using rule 32
	else           reduce using rule 32
	while          reduce using rule 32
	val            reduce using rule 32
	var            reduce using rule 32
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'*'            shift, and enter state 67
	'/'            shift, and enter state 68
	'%'            shift, and enter state 69
	'>'            shift, and enter state 70
	">="           shift, and enter state 71
	'<'            shift, and enter state 72
	"<="           shift, and enter state 73
	"=="           shift, and enter state 74
	"!="           shift, and enter state 75
	"&&"           shift, and enter state 76
	"||"           shift, and enter state 77
	print          reduce using rule 32
	return         reduce using rule 32


State 42

	Expr -> Atomic .                                    (rule 49)

	id             reduce using rule 49
	')'            reduce using rule 49
	'}'            reduce using rule 49
	';'            reduce using rule 49
	if             reduce using rule 49
	else           reduce using rule 49
	while          reduce using rule 49
	val            reduce using rule 49
	var            reduce using rule 49
	'+'            reduce using rule 49
	'-'            reduce using rule 49
	'*'            reduce using rule 49
	'/'            reduce using rule 49
	'%'            reduce using rule 49
	'>'            reduce using rule 49
	">="           reduce using rule 49
	'<'            reduce using rule 49
	"<="           reduce using rule 49
	"=="           reduce using rule 49
	"!="           reduce using rule 49
	"&&"           reduce using rule 49
	"||"           reduce using rule 49
	print          reduce using rule 49
	return         reduce using rule 49


State 43

	Atomic -> id .                                      (rule 53)

	id             reduce using rule 53
	')'            reduce using rule 53
	'}'            reduce using rule 53
	';'            reduce using rule 53
	if             reduce using rule 53
	else           reduce using rule 53
	while          reduce using rule 53
	val            reduce using rule 53
	var            reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'*'            reduce using rule 53
	'/'            reduce using rule 53
	'%'            reduce using rule 53
	'>'            reduce using rule 53
	">="           reduce using rule 53
	'<'            reduce using rule 53
	"<="           reduce using rule 53
	"=="           reduce using rule 53
	"!="           reduce using rule 53
	"&&"           reduce using rule 53
	"||"           reduce using rule 53
	print          reduce using rule 53
	return         reduce using rule 53


State 44

	Atomic -> num .                                     (rule 54)

	id             reduce using rule 54
	')'            reduce using rule 54
	'}'            reduce using rule 54
	';'            reduce using rule 54
	if             reduce using rule 54
	else           reduce using rule 54
	while          reduce using rule 54
	val            reduce using rule 54
	var            reduce using rule 54
	'+'            reduce using rule 54
	'-'            reduce using rule 54
	'*'            reduce using rule 54
	'/'            reduce using rule 54
	'%'            reduce using rule 54
	'>'            reduce using rule 54
	">="           reduce using rule 54
	'<'            reduce using rule 54
	"<="           reduce using rule 54
	"=="           reduce using rule 54
	"!="           reduce using rule 54
	"&&"           reduce using rule 54
	"||"           reduce using rule 54
	print          reduce using rule 54
	return         reduce using rule 54


State 45

	Atomic -> real .                                    (rule 55)

	id             reduce using rule 55
	')'            reduce using rule 55
	'}'            reduce using rule 55
	';'            reduce using rule 55
	if             reduce using rule 55
	else           reduce using rule 55
	while          reduce using rule 55
	val            reduce using rule 55
	var            reduce using rule 55
	'+'            reduce using rule 55
	'-'            reduce using rule 55
	'*'            reduce using rule 55
	'/'            reduce using rule 55
	'%'            reduce using rule 55
	'>'            reduce using rule 55
	">="           reduce using rule 55
	'<'            reduce using rule 55
	"<="           reduce using rule 55
	"=="           reduce using rule 55
	"!="           reduce using rule 55
	"&&"           reduce using rule 55
	"||"           reduce using rule 55
	print          reduce using rule 55
	return         reduce using rule 55


State 46

	Atomic -> '(' . Expr ')'                            (rule 58)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 91
	Atomic         goto state 42

State 47

	Expr -> '-' . Expr                                  (rule 48)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 90
	Atomic         goto state 42

State 48

	Expr -> '!' . Expr                                  (rule 47)

	id             shift, and enter state 43
	num            shift, and enter state 44
	real           shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'!'            shift, and enter state 48
	true           shift, and enter state 49
	false          shift, and enter state 50
	readln         shift, and enter state 51

	Readln         goto state 40
	Expr           goto state 89
	Atomic         goto state 42

State 49

	Atomic -> true .                                    (rule 56)

	id             reduce using rule 56
	')'            reduce using rule 56
	'}'            reduce using rule 56
	';'            reduce using rule 56
	if             reduce using rule 56
	else           reduce using rule 56
	while          reduce using rule 56
	val            reduce using rule 56
	var            reduce using rule 56
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	'%'            reduce using rule 56
	'>'            reduce using rule 56
	">="           reduce using rule 56
	'<'            reduce using rule 56
	"<="           reduce using rule 56
	"=="           reduce using rule 56
	"!="           reduce using rule 56
	"&&"           reduce using rule 56
	"||"           reduce using rule 56
	print          reduce using rule 56
	return         reduce using rule 56


State 50

	Atomic -> false .                                   (rule 57)

	id             reduce using rule 57
	')'            reduce using rule 57
	'}'            reduce using rule 57
	';'            reduce using rule 57
	if             reduce using rule 57
	else           reduce using rule 57
	while          reduce using rule 57
	val            reduce using rule 57
	var            reduce using rule 57
	'+'            reduce using rule 57
	'-'            reduce using rule 57
	'*'            reduce using rule 57
	'/'            reduce using rule 57
	'%'            reduce using rule 57
	'>'            reduce using rule 57
	">="           reduce using rule 57
	'<'            reduce using rule 57
	"<="           reduce using rule 57
	"=="           reduce using rule 57
	"!="           reduce using rule 57
	"&&"           reduce using rule 57
	"||"           reduce using rule 57
	print          reduce using rule 57
	return         reduce using rule 57


State 51

	Readln -> readln . '(' ')'                          (rule 12)

	'('            shift, and enter state 88


State 52

	Assign -> id "/=" Expr .                            (rule 31)
	Expr -> Expr . '+' Expr                             (rule 34)
	Expr -> Expr . '-' Expr                             (rule 35)
	Expr -> Expr . '*' Expr                             (rule 36)
	Expr -> Expr . '/' Expr                             (rule 37)
	Expr -> Expr . '%' Expr                             (rule 38)
	Expr -> Expr . "&&" Expr                            (rule 39)
	Expr -> Expr . "||" Expr                            (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . ">=" Expr                            (rule 42)
	Expr -> Expr . '<' Expr                             (rule 43)
	Expr -> Expr . "<=" Expr                            (rule 44)
	Expr -> Expr . "==" Expr                            (rule 45)
	Expr -> Expr . "!=" Expr                            (rule 46)

	id             reduce using rule 31
	'}'            reduce using rule 31
	';'            reduce using rule 31
	if             reduce using rule 31
	else           reduce using rule 31
	while          reduce using rule 31
	val            reduce using rule 31
	var            reduce using rule 31
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'*'            shift, and enter state 67
	'/'            shift, and enter state 68
	'%'            shift, and enter state 69
	'>'            shift, and enter state 70
	">="           shift, and enter state 71
	'<'            shift, and enter state 72
	"<="           shift, and enter state 73
	"=="           shift, and enter state 74
	"!="           shift, and enter state 75
	"&&"           shift, and enter state 76
	"||"           shift, and enter state 77
	print          reduce using rule 31
	return         reduce using rule 31


State 53

	Assign -> id "*=" Expr .                            (rule 30)
	Expr -> Expr . '+' Expr                             (rule 34)
	Expr -> Expr . '-' Expr                             (rule 35)
	Expr -> Expr . '*' Expr                             (rule 36)
	Expr -> Expr . '/' Expr                             (rule 37)
	Expr -> Expr . '%' Expr                             (rule 38)
	Expr -> Expr . "&&" Expr                            (rule 39)
	Expr -> Expr . "||" Expr                            (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . ">=" Expr                            (rule 42)
	Expr -> Expr . '<' Expr                             (rule 43)
	Expr -> Expr . "<=" Expr                            (rule 44)
	Expr -> Expr . "==" Expr                            (rule 45)
	Expr -> Expr . "!=" Expr                            (rule 46)

	id             reduce using rule 30
	'}'            reduce using rule 30
	';'            reduce using rule 30
	if             reduce using rule 30
	else           reduce using rule 30
	while          reduce using rule 30
	val            reduce using rule 30
	var            reduce using rule 30
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'*'            shift, and enter state 67
	'/'            shift, and enter state 68
	'%'            shift, and enter state 69
	'>'            shift, and enter state 70
	">="           shift, and enter state 71
	'<'            shift, and enter state 72
	"<="           shift, and enter state 73
	"=="           shift, and enter state 74
	"!="           shift, and enter state 75
	"&&"           shift, and enter state 76
	"||"           shift, and enter state 77
	print          reduce using rule 30
	return         reduce using rule 30


State 54

	Assign -> id "-=" Expr .                            (rule 29)
	Expr -> Expr . '+' Expr                             (rule 34)
	Expr -> Expr . '-' Expr                             (rule 35)
	Expr -> Expr . '*' Expr                             (rule 36)
	Expr -> Expr . '/' Expr                             (rule 37)
	Expr -> Expr . '%' Expr                             (rule 38)
	Expr -> Expr . "&&" Expr                            (rule 39)
	Expr -> Expr . "||" Expr                            (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . ">=" Expr                            (rule 42)
	Expr -> Expr . '<' Expr                             (rule 43)
	Expr -> Expr . "<=" Expr                            (rule 44)
	Expr -> Expr . "==" Expr                            (rule 45)
	Expr -> Expr . "!=" Expr                            (rule 46)

	id             reduce using rule 29
	'}'            reduce using rule 29
	';'            reduce using rule 29
	if             reduce using rule 29
	else           reduce using rule 29
	while          reduce using rule 29
	val            reduce using rule 29
	var            reduce using rule 29
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'*'            shift, and enter state 67
	'/'            shift, and enter state 68
	'%'            shift, and enter state 69
	'>'            shift, and enter state 70
	">="           shift, and enter state 71
	'<'            shift, and enter state 72
	"<="           shift, and enter state 73
	"=="           shift, and enter state 74
	"!="           shift, and enter state 75
	"&&"           shift, and enter state 76
	"||"           shift, and enter state 77
	print          reduce using rule 29
	return         reduce using rule 29


State 55

	Assign -> id "+=" Expr .                            (rule 28)
	Expr -> Expr . '+' Expr                             (rule 34)
	Expr -> Expr . '-' Expr                             (rule 35)
	Expr -> Expr . '*' Expr                             (rule 36)
	Expr -> Expr . '/' Expr                             (rule 37)
	Expr -> Expr . '%' Expr                             (rule 38)
	Expr -> Expr . "&&" Expr                            (rule 39)
	Expr -> Expr . "||" Expr                            (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . ">=" Expr                            (rule 42)
	Expr -> Expr . '<' Expr                             (rule 43)
	Expr -> Expr . "<=" Expr                            (rule 44)
	Expr -> Expr . "==" Expr                            (rule 45)
	Expr -> Expr . "!=" Expr                            (rule 46)

	id             reduce using rule 28
	'}'            reduce using rule 28
	';'            reduce using rule 28
	if             reduce using rule 28
	else           reduce using rule 28
	while          reduce using rule 28
	val            reduce using rule 28
	var            reduce using rule 28
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'*'            shift, and enter state 67
	'/'            shift, and enter state 68
	'%'            shift, and enter state 69
	'>'            shift, and enter state 70
	">="           shift, and enter state 71
	'<'            shift, and enter state 72
	"<="           shift, and enter state 73
	"=="           shift, and enter state 74
	"!="           shift, and enter state 75
	"&&"           shift, and enter state 76
	"||"           shift, and enter state 77
	print          reduce using rule 28
	return         reduce using rule 28


State 56

	Assign -> id '=' Expr .                             (rule 27)
	Expr -> Expr . '+' Expr                             (rule 34)
	Expr -> Expr . '-' Expr                             (rule 35)
	Expr -> Expr . '*' Expr                             (rule 36)
	Expr -> Expr . '/' Expr                             (rule 37)
	Expr -> Expr . '%' Expr                             (rule 38)
	Expr -> Expr . "&&" Expr                            (rule 39)
	Expr -> Expr . "||" Expr                            (rule 40)
	Expr -> Expr . '>' Expr                             (rule 41)
	Expr -> Expr . ">=" Expr                            (rule 42)
	Expr -> Expr . '<' Expr                             (rule 43)
	Expr -> Expr . "<=" Expr                            (rule 44)
	Expr -> Expr . "==" Expr                            (rule 45)
	Expr -> Expr . "!=" Expr                            (rule 46)

	id             reduce using rule 27
	'}'            reduce using rule 27
	';'            reduce using rule 27
	if             reduce using rule 27
	else           reduce using rule 27
	while          reduce using rule 27
	val            reduce using rule 27
	var            reduce using rule 27
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'*'            shift, and enter state 67
	'/'            shift, and enter state 68
	'%'            shift, and enter state 69
	'>'            shift, and enter state 70
	">="           shift, and enter state 71
	'<'            shift, and enter state 72
	"<="           shift, and enter state 73
	"=="           shift, and enter state 74
	"!="           shift, and enter state 75
	"&&"           shift, and enter state 76
	"||"           shift, and enter state 77
	print          reduce using rule 27
	return         reduce using rule 27


State 57
